<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textCapWords"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Whipped Cream"
            android:paddingLeft="24dp"
            android:id="@+id/whipped_cream_id"
            android:textSize="18sp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Chocolate Topping"
            android:paddingLeft="24dp"
            android:id="@+id/chocolate_id"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:text="@string/quantityText"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceLarge"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantityVal"
            android:id="@+id/quantityVar"
            android:textAlignment="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAppearance="?android:textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:id="@+id/plus_sign"
                android:layout_marginRight="10dp"
                android:onClick="increment"
                android:textAppearance="?android:textAppearanceLarge"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:layout_toRightOf="@id/plus_sign"
                android:onClick="decrement"

                android:textAppearance="?android:textAppearanceLarge"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceVal"
            android:id="@+id/orderSummary"
            android:textAlignment="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAppearance="?android:textAppearanceLarge" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_id"
            android:layout_marginTop="10dp"
            android:text="@string/order"
            android:textSize="14sp"
            android:onClick="submitOrder"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:background="#f1041c"
            android:onClick="confirmOrder"
            />

    </LinearLayout>

</ScrollView>
